@@ -1,3 +1,7 @@
+2016-12-23 (0.12.9)
+	ANDROID: swipe from bottom to show menu
+	ANDROID: fix '?' key input using gboard
+
 2016-12-18 (0.12.9)
 	ANDROID Allow input of special characters
 	SDL Allow input of special characters
